force-app/main/default/objects/Lead/fields/Funds_Asked_for_Contract__c.field-meta.xml
<CustomField>
    <fullName>Funds_Asked_for_Contract__c</fullName>
    <description>The amount of funds needed for the small business program.</description>
    <inlineHelpText>How much does the applicant need for their small business project.
Will be in the contract.</inlineHelpText>
    <label>Funds Asked for Contract</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>