force-app/main/default/objects/Lead/fields/Industry_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_NAICS_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Industry NAICS  Code</label>
    <referenceTo>Industry_Fund__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>