force-app/main/default/objects/Lead/fields/Is_Funds_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Funds_Available__c</fullName>
    <description>Check if there is funds to give out</description>
    <formula>CASE(1,
    IF((Industry_NAICS_Code__r.Remaining_Funds__c  - Funds_Asked_for_Contract__c) &gt; 0, 1, 0) , 10,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Funds Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>