force-app/main/default/objects/Lead/fields/Likelihood_of_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_Acceptance__c</fullName>
    <description>Rate the likelihood of acceptance to the program.</description>
    <formula>IF(Is_Funds_Available__c &gt; 0, (Rate_Funds_Needed_for_Contract__c * 0.6) + (Rate_Small_Business__c * 0.4) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The likelihood of application getting accepted. Scale from 1 to 10.</inlineHelpText>
    <label>Likelihood of Acceptance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>