force-app/main/default/objects/Lead/fields/NAICS_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Text__c</fullName>
    <label>NAICS Code Text</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>