force-app/main/default/objects/Lead/fields/Region_Location__c.field-meta.xml
<CustomField>
    <fullName>Region_Location__c</fullName>
    <description>Where is the region location of the applicant.</description>
    <label>Region Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region_Location_GLOBAL</valueSetName>
    </valueSet>
</CustomField>