force-app/main/default/objects/Lead/fields/Type_of_Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work_Category__c</fullName>
    <description>The type of Category the applicant work does.</description>
    <inlineHelpText>Select the work category the applicant&apos;s business is in.</inlineHelpText>
    <label>Type of Work - Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Work_Category_GLOBAL</valueSetName>
    </valueSet>
</CustomField>