force-app/main/default/objects/Lead/recordTypes/Application_Process.recordType-meta.xml
<RecordType>
    <fullName>Application_Process</fullName>
    <active>true</active>
    <businessProcess>Lead EERE Application Process</businessProcess>
    <label>Application Process</label>
</RecordType>