force-app/main/default/objects/Lead/listViews/Lead_Sales_Midwest_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Sales_Midwest_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead - Sales - Midwest - Queue</label>
    <queue>Lead_Sales_Midwest_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>