force-app/main/default/objects/Lead/listViews/Lead_Sales_West_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Sales_West_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead - Sales - West - Queue</label>
    <queue>Lead_Sales_West_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>