force-app/main/default/objects/Lead/listViews/VPs_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>VPs_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>VPs - Queue</label>
    <queue>VPs_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>